bk_ida/gccida/c3/ggc_mark_rtx_children_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:812:4: error: expected ';' after expression
rtx v36; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:812:5: error: use of undeclared identifier 'v36'
rtx v36; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:824:1: error: use of undeclared identifier 'v36'
v36 = r; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:828:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)r[4]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:876:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)r[2]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:900:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtstr = ( const void *)r[2]; 
                       ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:942:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( const void *)r[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:947:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = (  struct rtx_def *)r[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:982:5: error: use of undeclared identifier 'v36'
r = v36; 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:983:6: error: use of undeclared identifier 'v36'
v3 = v36[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:1009:5: error: use of undeclared identifier 'v36'
r = v36; 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/ggc-common.c:1096:5: error: use of undeclared identifier 'v36'
r = v36; 
    ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_mark_rtx_children_1/src/obj/ggc-common.o] Error 1
